--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 header:nth-child(1) {
 margin-left: 200px;
 }
@@ -5,12 +7,15 @@ margin-left: 200px;
 header article p:first-child {
     font-family: 'Dancing Script', cursive;
         font-size: 20px;
+        color:black;
+        font:bold;
 
 }
 
 hr {
-    border-style:inset;
+    border-bottom:10px dashed #ccc;
     border-radius: 20%;
+    
 }
 header article {
     margin-left: 55px;
@@ -25,9 +30,113 @@ header nav {
 }
 
 header nav:nth-child(7) {
-    /* float: right; */
+    /* f[loat: right; */
     margin-right: 30px;
     padding-right: 0px;
     background-color: black;
     }
+section article{
+    margin-left: 300px;
+    
+  
+}
+
+article p{
+    color:rgb(158, 157, 157) ;
+    font-size: small;
+}
+
+
+h1{
+    font-family: 'Oswald', sans-serif;
+    font-size:xx-large;
+     font:bold;
+     color:black;
+        
+}
+
+    #print{
+       float: right;
+       color: rgb(158, 157, 157);
+       margin-top: -38px;
+       margin-right: 310px;
+    }
+
+   #p1{
+      text-align: center;
+    
+
+
+   } 
+.two article p{
+    font-size: 25px;
+    padding-top: 50px;
+    padding: 2%;
+    padding-left: 20px;
+     padding-right: 20px;
+    margin-left:60px;
+    width:60%;
+    display: block;
+    
+}
+
+.two div{
+
+    position: relative;
+    text-align: center;
+    
+}
+.two div img{
+    width: 100%;
+}
+
+
+#item{
+  position: absolute;
+
+  box-sizing: border-box;  
+  display: grid;
+  grid-template-columns: 300px 1fr  ;
+  padding-bottom:60px ;
+  padding-left: 10px;
+  padding-top: 15px;
+  bottom: 0;
+  margin-bottom: 100px;
+  font-size: 20px;
+  color: rgb(66, 66, 66);
+  
+}
+
+
+.three img{
+   margin-left: 200px; 
+}
+#ph{
+
+    margin-left: 300px;
+    margin-top: -100px;
+    font-size: 18px;
+    
+}
+#button{
+    
+    background-color:rgb(161, 90, 82);
+    margin-top: -70px;
+    width: 200px;
+    height: 60px;
+    color: white;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
+    float: right;
+
+}
+footer{
+    text-align: center;
+    /* clear: both; */
+    align-items: center;
+    border:1px solid #ccc;
+    color: grey;
+
+}
+
 
